<resources>
    <string name="app_name">Word Game</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello</string>
    <string name="start">Start</string>
    <string name="button">Button</string>
    <string name="last_game">Last Game</string>
    <string name="high_score">High Score</string>
    <string name="high_scoreE">HIGH SCORE</string>
    <string name="level_1">Level -1</string>
    <string name="exit">EXIT</string>
    <string name="t">T</string>
</resources>
